# Machine-learning_OpenCV

./: .gitignore  CMakeLists.txt  MYNOTES.md  README.md  facedecetion.py  main.cpp  main.hpp
