cmake_minimum_required(VERSION 3.0)
project(project_name)
set(CMAKE_CXX_STANDARD 11)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall")
set(OpenCV_DIR /usr/local/Cellar/opencv/4.7.0_1)
find_package(OpenCV REQUIRED )
include_directories(${OpenCV_INCLUDE_DIRS})
file(GLOB SOURCES *.cpp *.c)
get_filename_component(BIN ${SOURCES} NAME_WE)
add_executable(${BIN} ${SOURCES})
target_link_libraries(${BIN} ${OpenCV_LIBS})
